# juk2

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
.cargo/: config.toml
juk-com/: Cargo.toml
juk-com/src/: eventparser.rs  history.rs  interface.rs  lib.rs  linebuffer.rs  terminal.rs
juk-firmware/: Cargo.toml  build.rs
juk-firmware/src/: lib.rs  main.rs  strings.rs
juk-led/: Cargo.toml
juk-led/src/: lib.rs
