[workspace]
resolver = "3"
members = ["juk-firmware"]
default-members = ["juk-firmware"]

[workspace.package]
edition = "2024"
version = "0.1.0-dev.1"
authors = ["lysolaka"]
license = "GPL-3"
rust-version = "1.88"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
