[package]
name = "juk-com"
description = "Communication interface for use with the `juk-firmware`."
version.workspace = true
authors.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
esp-hal = { version = "~1.0", default-features = false, features = ["defmt", "requires-unstable"] }
vte = { version = "0.15.0", default-features = false }

defmt = "1.0.1"
