[package]
name = "juk-firmware"
description = "The JUK CNC firmware running on the ESP32-S3."
version.workspace = true
authors.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[dependencies]
esp-backtrace = { version = "0.18.1", features = ["defmt", "esp32s3", "panic-handler"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "psram", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp32s3"] }
shadow-rs = { version = "1.7.0", default-features = false }
const_format = { version = "0.2.35", features = ["fmt"] }

critical-section = "1.2.0"
defmt = "1.0.1"
embassy-executor = "0.9.1"
embassy-time = "0.5.0"
esp-alloc = "0.9.0"
static_cell = "2.1.1"

juk-com = { path = "../juk-com" }

[dependencies.esp-println]
version = "0.16.1"
default-features = false
features = [
  "critical-section",
  "defmt-espflash",
  "esp32s3",
  "jtag-serial",
]

[build-dependencies]
shadow-rs = { version = "1.7.0", features = ["no_std"] }
